--- a/index.htm
+++ b/index.htm
@@ -14,5 +14,9 @@
   </head>
   <body>
     <h1>Git remote</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste perferendis minus fuga modi commodi numquam magnam temporibus! Repudiandae dignissimos beatae adipisci, repellat dolores suscipit, dolore voluptatem quaerat, assumenda
+      obcaecati nostrum.
+    </p>
   </body>
 </html>
