menambahkan class baru

--- a/index.htm
+++ b/index.htm
@@ -10,11 +10,14 @@
         color: rgb(0, 0, 255);
         margin: 50px auto;
       }
+      .pOne {
+        color: rgb(136, 136, 136);
+      }
     </style>
   </head>
   <body>
     <h1>Git remote</h1>
-    <p>
+    <p class="pOne">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste perferendis minus fuga modi commodi numquam magnam temporibus! Repudiandae dignissimos beatae adipisci, repellat dolores suscipit, dolore voluptatem quaerat, assumenda
       obcaecati nostrum.
     </p>
